--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -3,7 +3,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You are here iin secret page</h1>
+    <h1 class="display-3">You are here in secret page</h1>
     <p class="secret-text">Mehdi is programming to make it more secret for users</p>
     <hr>
     
