--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,12 @@
     <h1 class="display-3">Secrets</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
     <hr>
+    <% if(!userIsAuthenticated){ %>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-
+    <% } else { %>
+      <a class="btn btn-dark btn-lg" href="/logout" role="button">Loout</a>
+      <% } %>
   </div>
 </div>
 
