--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,12 +4,19 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You are here in secret page</h1>
-    <p class="secret-text">Mehdi is programming to make it more secret for users</p>
-    <hr>
+
+    <% users.forEach(function(user) { %>
+      <% user.secret.forEach(function(secret) { %>
+        <p class="secret-text"><%= secret %></p>
+      <% }); %>
+  <% }); %>
     
+    <hr>
+    <% if(userIsAuthenticated){ %>
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit your secret</a>
-  </div>
+    <% } %>
+   </div>
 </div>
 
 <%- include('partials/footer') %>
